--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@rescript/core": "^1.1.0",
     "@rescript/react": "^0.12.0",
     "next": "^14.0.4",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^11.1.0-rc.3"
+    "rescript": "^11.1.0-rc.3",
+    "sonner": "^1.4.3"
   },
   "repository": "https://github.com/rescript-lang/create-rescript-app",
   "scripts": {
