--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@rescript/core": "^1.1.0",
     "@rescript/react": "^0.12.0",
+    "@vercel/analytics": "^1.3.1",
     "next": "^14.0.4",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
