--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "author": "Patrick Ecker <ryyppy@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rescript/core": "^1.1.0",
+    "@rescript/core": "^1.5.2",
     "@rescript/react": "^0.12.0",
     "@vercel/analytics": "^1.3.1",
+    "mongodb": "^6.8.0",
     "next": "^14.0.4",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rescript": "^11.1.0-rc.3",
+    "rescript": "^11.1.2",
     "sonner": "^1.4.3"
   },
   "repository": "https://github.com/rescript-lang/create-rescript-app",
